# aeview

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.aeview/reviewers/concurrency/: REVIEWER.md  harness.json
.aeview/reviewers/python-idioms/: REVIEWER.md
.aeview/reviewers/simplify/: REVIEWER.md  harness.json
.aeview/reviewers/tests/: REVIEWER.md  harness.json
.agents/skills/aeview/: SKILL.md
.agents/skills/aeview-commits/: SKILL.md
.agents/skills/aeview-effective-pr/: SKILL.md
.agents/skills/aeview-install/: SKILL.md
.agents/skills/aeview-loop/: SKILL.md
.agents/skills/aeview-loop-with-confirmation/: SKILL.md
.agents/skills/aeview-loop-with-confirmation/references/: convergence.md
.agents/skills/aeview-loop/references/: convergence.md
.agents/skills/aeview-pr/: SKILL.md
.agents/skills/aeview-pr/scripts/: pr-worktree.sh
.agents/skills/aeview/references/: pr-checkout.md
.agents/skills/release/: SKILL.md
.agents/skills/release/scripts/: preflight.sh
.github/: dependabot.yml
.github/workflows/: release.yml
src/aeview/: __init__.py  activate.py  bundle.py  cli.py  config.py  dedup.py  doctor.py  fanout.py  github.py  ignore.py  merge.py  process.py  prompt.py  report.py  resolve.py  runstore.py  schema.py  scope.py
src/aeview/_data/: DEDUPLICATION.md  REVIEWER.md  harness.json  settings.json
src/aeview/harness/: __init__.py  base.py  claude_code.py  codex.py  copilot.py  eventlog.py
tests/: conftest.py  test_activate.py  test_bundle_output.py  test_cli.py  test_codex.py  test_config.py  test_copilot.py  test_dedup.py  test_doctor.py  test_e2e.py  test_eventlog.py  test_fanout.py  test_github.py  test_harness.py  test_ignore.py  test_init.py  test_merge.py  test_process.py  test_query.py  test_report.py  test_resolve.py  test_retention.py  test_reviewers_cmd.py  test_runstore.py  test_schema.py  test_scope_bundle.py
tests/stubs/: claude  gh
