[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "aeview"
version = "0.0.1"
description = "Fan code reviewers across multiple agent harnesses and merge one verdict."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MarlzRana" }]
keywords = ["code-review", "ai", "agents", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6",
    "pathspec>=0.12",
    "claude-agent-sdk>=0.2.101",
    "openai-codex>=0.1.0b3",
    # Temporary: opt into the prerelease codex runtime that ships manylinux (glibc Linux) wheels.
    # openai-codex pins this exact runtime; declaring it directly with a prerelease floor is the
    # only way to allow that one alpha without enabling prereleases globally (which would drag in
    # alpha pydantic etc.). Drop once openai-codex pins a stable manylinux runtime (0.137.0a4 ->
    # stable looks imminent on PyPI). uv.lock holds the resolved exact version.
    "openai-codex-cli-bin>=0.137.0a4",
    "github-copilot-sdk>=1.0.1",
]

[project.scripts]
aeview = "aeview.cli:app"

[project.urls]
Homepage = "https://github.com/MarlzRana/aeview"
Repository = "https://github.com/MarlzRana/aeview"
Issues = "https://github.com/MarlzRana/aeview/issues"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["smoke: live tests that hit real harness CLIs (local-only, never CI)"]
testpaths = ["tests"]
